# pytorch-1

./: setup.py
test/: test_jit.py  test_models.py  test_optim.py
torch/: jit.py
torch/csrc/autograd/: ir.cpp  ir.h  python_function.cpp  tracer.cpp
torch/csrc/autograd/functions/: map.cpp  map.h
torch/csrc/autograd/jit/: pointwise_fusion.cpp  pointwise_fusion.h
torch/csrc/jit/: graph_fuser.cpp  ir.h
torch/csrc/jit/passes/: common_subexpression_elimination.cpp
torch/csrc/rtc/: compile_ptx.cpp  compile_ptx.h
torch/csrc/toffee/: export.cpp
torch/csrc/utils/: tuple_parser.h
torch/lib/: README.md  build_all.sh
torch/lib/THRTC/: CMakeLists.txt  apply.cu  apply.h  compile_ptx.cpp
torch/nn/_functions/: rnn.py
torch/optim/: optimizer.py  sgd.py
torch/sparse/: __init__.py
