CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

IF(NOT Torch_FOUND)
  FIND_PACKAGE(Torch REQUIRED)
ENDIF()

IF(NOT CUDA_FOUND)
  FIND_PACKAGE(CUDA 7.0 REQUIRED)
ENDIF()

IF(NOT TH_LIBRARIES)
  SET(TH_LIBRARIES "TH")
ENDIF(NOT TH_LIBRARIES)
MESSAGE(STATUS "TH_LIBRARIES: ${TH_LIBRARIES}")
IF(NOT THC_LIBRARIES)
  SET(THC_LIBRARIES "THC")
ENDIF(NOT THC_LIBRARIES)
MESSAGE(STATUS "THC_LIBRARIES: ${THC_LIBRARIES}")

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("${CUDA_SDK_ROOT_DIR}/common/inc")
INCLUDE_DIRECTORIES("${THC_INSTALL_INCLUDE_SUBDIR}/THC")

LIST(APPEND CUDA_NVCC_FLAGS "-std=c++11")
# IF(APPLE)
#   LINK_DIRECTORIES("${Torch_INSTALL_LIB}" ${CUDA_TOOLKIT_ROOT_DIR}/lib)
# ELSE()
#   LINK_DIRECTORIES("${Torch_INSTALL_LIB}" ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
# ENDIF(APPLE)

IF(NOT THRTC_INSTALL_BIN_SUBDIR
    OR NOT THRTC_INSTALL_LIB_SUBDIR
    OR NOT THRTC_INSTALL_INCLUDE_SUBDIR
    OR NOT THRTC_INSTALL_CMAKE_SUBDIR)

  INCLUDE_DIRECTORIES(${TH_INCLUDE_PATH} ${TH_INCLUDE_PATH}/TH)
  LINK_DIRECTORIES(${TH_LIB_PATH})

  SET(THRTC_INSTALL_BIN_SUBDIR "bin" CACHE PATH "THRTC install binary subdirectory")
  SET(THRTC_INSTALL_LIB_SUBDIR "lib" CACHE PATH "THRTC install library subdirectory")
  SET(THRTC_INSTALL_INCLUDE_SUBDIR "include" CACHE PATH "THRTC install include subdirectory")
  SET(THRTC_INSTALL_CMAKE_SUBDIR "share/cmake/THRTC" CACHE PATH "THRTC install cmake subdirectory")
ELSE()
  SET(THRTC_INSTALL_BIN_SUBDIR ${Torch_INSTALL_BIN_SUBDIR})
  SET(THRTC_INSTALL_LIB_SUBDIR ${Torch_INSTALL_LIB_SUBDIR})
  SET(THRTC_INSTALL_INCLUDE_SUBDIR ${Torch_INSTALL_INCLUDE_SUBDIR})
  SET(THRTC_INSTALL_CMAKE_SUBDIR ${Torch_INSTALL_CMAKE_SUBDIR})
ENDIF()

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

SET(src
  compile_ptx.cpp
  )

SET(src-cuda
  apply.cu
  )

# TODO: HACK.  There's a "correct" way to find nvrtc in the CUDA install
# dir and this ain't it.
LINK_DIRECTORIES("/usr/local/cuda/lib64/")

MESSAGE(STATUS "got cuda version " ${CUDA_VERSION})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FORCE_INLINES")

CUDA_ADD_LIBRARY(THRTC SHARED ${src} ${src-cuda})
TARGET_LINK_LIBRARIES(THRTC ${TH_LIBRARIES} ${THC_LIBRARIES} nvrtc cuda)

INSTALL(TARGETS THRTC
          RUNTIME DESTINATION "${THRTC_INSTALL_BIN_SUBDIR}"
          LIBRARY DESTINATION "${THRTC_INSTALL_LIB_SUBDIR}"
          ARCHIVE DESTINATION "${THRTC_INSTALL_LIB_SUBDIR}")

INSTALL(
  FILES
    apply.h
    compile_ptx.h
    DESTINATION "${THRTC_INSTALL_INCLUDE_SUBDIR}/THRTC")
